--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MSSQL": "Data Source=103.245.236.208;Initial Catalog=cltxmomo;Persist Security Info=True;TrustServerCertificate=True; User ID=sa;Password=Admin123@"
+    "MSSQL": "Data Source=112.78.2.90;Initial Catalog=mmc39583_cltxmomo;Persist Security Info=True;TrustServerCertificate=True; User ID=mmc39583_cltxmomo;Password=%11nvyP50"
   },
   "SuperAdminDefaultOption": {
     "Username": "admin",
