--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MSSQL": "Data Source=112.78.2.90;Initial Catalog=mmc39583_cltxmomo;Persist Security Info=True;TrustServerCertificate=True; User ID=mmc39583_cltxmomo;Password=%11nvyP50"
+    "MSSQL": "Data Source=112.78.2.90;Initial Catalog=mmc63545_cltxmomo;Persist Security Info=True;TrustServerCertificate=True; User ID=mmc63545_cltxmomo;Password=#72l4e6oF"
   },
   "SuperAdminDefaultOption": {
     "Username": "admin",
